maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:61: error: not found: value void
	void setDirection(Direction.NORD)
        ^JediEscaper:67: error: not found: value void
	void setDirection(Direction.SUD)
        ^JediEscaper:73: error: not found: value void
	void setDirection(Direction.OUEST)
        ^JediEscaper:79: error: not found: value void
	void setDirection(Direction.EST)
        ^